Fixed Footer issues and got rid of scrollbar displaying at all on whole app

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -13,6 +13,10 @@ body {
   background-color: var(--bs-page);
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
+
 main {
   flex-grow: 1;
 }
